Tue Feb 16 11:15:00 UTC 2011  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:
          Initalise instance of enum ActivationMode when first
          created, otherwise rubbish value gets marshaled.

Tue Feb 15 13:53:16 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/PortableServer/Active_Object_Map.cpp:
          Fixed unsafe code that crashes server if servant is 0. It's visible
          only when debug logging is on.

Mon Feb 14 12:23:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/AMH_Response_Handler.cpp:
        * tao/Object.h:
        * tao/Object.inl:
        * tao/Object.cpp:
          Committed back these files, also didn't break ImR

Mon Feb 14 12:03:02 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Refcounted_ObjectKey.inl:
        * tao/Refcounted_ObjectKey.cpp:
          Committed back these files, also didn't break ImR

Mon Feb 14 11:47:38 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IORTable/Table_Adapter.h:
        * tao/IORTable/Table_Adapter.cpp:
          Committed back these files, also didn't break ImR

Mon Feb 14 11:32:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/AbstractBase.h:
        * tao/Valuetype/AbstractBase.cpp:
          Committed back these files, also didn't break ImR

Mon Feb 14 11:18:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Profile.h:
        * tao/Profile.inl:
        * tao/Profile.cpp:
          Committed back these files, also didn't break ImR

Mon Feb 14 11:04:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
        * tao/ObjectKey_Table.h:
        * tao/ObjectKey_Table.inl:
        * tao/ObjectKey_Table.cpp:
          Reapplied changes, didn't break ImR example
